@@ -29,6 +29,7 @@
   
   <div class="grid-container">
     <div class="grid-item">Durum:</div>            <div class="grid-item"><a id="statusText">İşlem başlayacak.</a></div>
+    <div class="grid-item">Cooldown:</div>       <div class="grid-item"><a id="remainingTimeInSec">?</a></div>
     <div class="grid-item">Başarılı işlem:</div>   <div class="grid-item"><a id="successfulAction">0</a></div>
     <div class="grid-item">Gerçekleşen işlem:</div><div class="grid-item"><a id="performedAction">0</a></div>
     <div class="grid-item">Planlanan işlem:</div>  <div class="grid-item"><a id="plannedAction">0</a></div>
